# SoftwareStudio

./: README.md  package-lock.json
autonomous_software_studio/: .env.template  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml  requirements.txt
autonomous_software_studio/.streamlit/: config.toml
autonomous_software_studio/config/: development.yaml  mcp_servers.json  production.yaml  prometheus.yml  testing.yaml
autonomous_software_studio/data/samples/: sample_checkpoint.json
autonomous_software_studio/docs/: api_reference.md  architecture.md  configuration.md  dashboard_user_guide.md  deployment.md  installation.md  mcp_integration_guide.md  openapi.yaml  prompt-versioning-guide.md  runbooks.md  troubleshooting.md  usage.md  workflow_diagram.mmd
autonomous_software_studio/docs/api/: ORCHESTRATOR_API.md
autonomous_software_studio/docs/guides/: DASHBOARD_GUIDE.md  DEPLOYMENT.md  TROUBLESHOOTING.md
autonomous_software_studio/docs/internal/: AGENT_SYSTEM.md  ARCHITECTURE.md  CONFIGURATION.md  DATABASE_SCHEMA.md
autonomous_software_studio/frontend/: .env.example  .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
autonomous_software_studio/reports/: e2e_benchmarks.json  e2e_report.md  penetration_test_results.md  security_audit_report.md
autonomous_software_studio/scripts/: analyze_template_vars.py  backup.sh  dashboard_load_test.py  deploy.sh  doc_coverage.py  example_orchestrator.py  generate_screenshots.py  generate_security_report.py  init-db.sql  install_claude_cli.sh  rollback.sh  start-docker.sh
autonomous_software_studio/src/: __init__.py  generate_api_docs.py
autonomous_software_studio/src/config/: __init__.py  agent_settings.py  validator.py
autonomous_software_studio/src/interfaces/: __init__.py  dashboard.py
autonomous_software_studio/src/mcp/: __init__.py  server_manager.py
autonomous_software_studio/src/orchestration/: __init__.py  context_manager.py  orchestrator.py  sqlite_checkpointer.py  state.py  workflow.py
autonomous_software_studio/src/personas/: __init__.py  architect_prompt.md  engineer_prompt.md  pm_prompt.md  qa_prompt.md  template_manager.py
autonomous_software_studio/src/wrappers/: __init__.py  architect_agent.py  base_agent.py  claude_wrapper.py  engineer_agent.py  env_manager.py  pm_agent.py  qa_agent.py  state.py
autonomous_software_studio/tests/: __init__.py
(+64 files in other folders)
